# ginkarbi

./: CMakeLists.txt  README  ancescomp.cpp  ancescomp.h  config.h.in  ethnicity.cpp  ethnicity.h  snpfile.cpp  snpfile.h
